--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,5 +1,5 @@
 <footer>
-        {{ nombre }} - {{ anio }}
+        {{ getName }} - {{ getAnio }}
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.js"></script>
