Correciones del código y diseño

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -4,15 +4,16 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-8">
-                <h1>Acerca de</h1>
+            <div class="col-sm-8">
+                <h1>About</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porta dignissim elit ut sodales. Suspendisse hendrerit erat eget luctus efficitur. Mauris vestibulum dolor pellentesque suscipit imperdiet. Morbi quis purus et lacus pretium gravida eu a sem. Pellentesque tellus urna, tempor at scelerisque et, mollis egestas elit. Quisque accumsan suscipit purus, eu cursus ante tempor ut. Donec volutpat accumsan tellus, a commodo risus tempus non. Etiam eros enim, posuere at libero vitae, aliquet hendrerit ipsum. Morbi eu posuere ex. Suspendisse vel hendrerit metus.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porta dignissim elit ut sodales. Suspendisse hendrerit erat eget luctus efficitur. Mauris vestibulum dolor pellentesque suscipit imperdiet. Morbi quis purus et lacus pretium gravida eu a sem.
                 </p>
             </div>
 
-            <div class="col-4">
+            <div class="col-sm-4">
                 <img src="assets/img/picture.jpg" alt="cabrita" class="img-thumbnail">
+                <small class="text-muted">* Imagen de muestra</small>
             </div>
         </div>
     </div>
