--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,14 +3,17 @@
     {{> navbar }}
 
     <div class="jumbotron">
-        <h1 class="display-4">Hello, {{ capitalize name }}!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <h1 class="display-4">Hola, {{ capitalize name }}!</h1>
+        <p class="lead">Este es un pequeño ejemplo de una aplicación hecha con javascript, nodejs y express. La funcionalidad de las misma en poca o casi nula, solo se desarrollo para poner en práctica los conocimientos aprendidos y el despliegue a producción en Heroku.</p>
         <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        <div class="text-center">
+            <p>Dudas, recomendaciones y aclaraciones en:</p>
+            <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/irving-didier-sarmiento2929/" target="_blank" role="button">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a class="btn btn-info btn-lg" href="https://twitter.com/didiersa" target="_blank" role="button">
+                <i class="fab fa-twitter"></i>
+            </a>
+        </div>
     </div>
-    <p>
-        Mi texto
-    </p>
-
 {{> footer }}    
