--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,5 +1,5 @@
 <footer>
-        {{ getName }} - {{ getAnio }}
+        Make with <i class="fas fa-heart"></i> <a href="https://twitter.com/didiersa">{{ capitalize name }}</a> {{ getAnio }}
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.js"></script>
